[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/World.gd" type="Script" id=1]
[ext_resource path="res://graphics/samurai_player.png" type="Texture" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://graphics/attack.png" type="Texture" id=4]
[ext_resource path="res://fonts/DefaultFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://graphics/defense.png" type="Texture" id=6]
[ext_resource path="res://graphics/move.png" type="Texture" id=7]
[ext_resource path="res://scenes/Card.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/GameMatch.gd" type="Script" id=9]
[ext_resource path="res://scripts/UI.gd" type="Script" id=10]
[ext_resource path="res://graphics/samurai_enemy.png" type="Texture" id=11]

[node name="GameMatch" type="Node" groups=[
"GameMatch",
]]
script = ExtResource( 9 )

[node name="World" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Tileset" type="Node2D" parent="World"]

[node name="Enemies" type="Node2D" parent="World"]

[node name="Enemy" type="Node2D" parent="World/Enemies" groups=[
"Character",
]]
position = Vector2( 100, 100 )
script = ExtResource( 3 )
hex_pos = Vector2( 2, 2 )

[node name="Sprite" type="Sprite" parent="World/Enemies/Enemy"]
scale = Vector2( 0.547215, 0.547215 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Enemy2" type="Node2D" parent="World/Enemies" groups=[
"Character",
]]
position = Vector2( 100, 100 )
script = ExtResource( 3 )
hex_pos = Vector2( 2, 3 )

[node name="Sprite" type="Sprite" parent="World/Enemies/Enemy2"]
scale = Vector2( 0.547215, 0.547215 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Enemy3" type="Node2D" parent="World/Enemies" groups=[
"Character",
]]
position = Vector2( 100, 100 )
script = ExtResource( 3 )
hex_pos = Vector2( 5, 1 )

[node name="Sprite" type="Sprite" parent="World/Enemies/Enemy3"]
scale = Vector2( 0.547215, 0.547215 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="Node2D" parent="World" groups=[
"Character",
]]
position = Vector2( 37.5, -64 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="World/Player"]
scale = Vector2( 0.547215, 0.547215 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Highlights" type="Node2D" parent="World"]

[node name="Camera2D" type="Camera2D" parent="World"]
current = true

[node name="UI" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 10 )

[node name="BottomUI" type="MarginContainer" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -220.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardsContainer" type="HBoxContainer" parent="UI/BottomUI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 200.0
alignment = 1

[node name="Investida" parent="UI/BottomUI/CardsContainer" instance=ExtResource( 8 )]
margin_left = 184.0
margin_right = 304.0
CardTitle = "Investida"
MoveValue = 1
AttackValue = 3

[node name="GolpeRapido" parent="UI/BottomUI/CardsContainer" instance=ExtResource( 8 )]
margin_left = 308.0
margin_right = 428.0
CardTitle = "Golpe RÃ¡pido"
MoveValue = 2
AttackValue = 1
DefenseValue = 1

[node name="GolpePreciso" parent="UI/BottomUI/CardsContainer" instance=ExtResource( 8 )]
CardTitle = "Golpe preciso"
MoveValue = 1
AttackValue = 2
DefenseValue = 1

[node name="Posicionar" parent="UI/BottomUI/CardsContainer" instance=ExtResource( 8 )]
margin_left = 556.0
margin_right = 676.0
CardTitle = "Posicionar"
MoveValue = 3
DefenseValue = 1

[node name="Enganar" parent="UI/BottomUI/CardsContainer" instance=ExtResource( 8 )]
margin_left = 680.0
margin_right = 800.0
CardTitle = "Enganar"
AttackValue = 1
DefenseValue = 3

[node name="TopHUD" type="MarginContainer" parent="UI"]
anchor_right = 1.0
margin_bottom = 120.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="HBoxContainer" parent="UI/TopHUD"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 72 )
alignment = 1

[node name="MoveInfo" type="HBoxContainer" parent="UI/TopHUD/HUD"]
margin_left = 339.0
margin_right = 438.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 70 )

[node name="IconContainer" type="MarginContainer" parent="UI/TopHUD/HUD/MoveInfo"]
margin_right = 70.0
margin_bottom = 80.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Icon" type="TextureRect" parent="UI/TopHUD/HUD/MoveInfo/IconContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 70.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="TextContainer" type="CenterContainer" parent="UI/TopHUD/HUD/MoveInfo"]
margin_left = 74.0
margin_right = 99.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 70 )

[node name="Label" type="Label" parent="UI/TopHUD/HUD/MoveInfo/TextContainer"]
margin_top = 4.0
margin_right = 25.0
margin_bottom = 76.0
rect_min_size = Vector2( 25, 70 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "8"
align = 1
valign = 1

[node name="AttackInfo" type="HBoxContainer" parent="UI/TopHUD/HUD"]
margin_left = 442.0
margin_right = 541.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 70 )

[node name="IconContainer" type="MarginContainer" parent="UI/TopHUD/HUD/AttackInfo"]
margin_right = 70.0
margin_bottom = 80.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Icon" type="TextureRect" parent="UI/TopHUD/HUD/AttackInfo/IconContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 70.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="TextContainer" type="CenterContainer" parent="UI/TopHUD/HUD/AttackInfo"]
margin_left = 74.0
margin_right = 99.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 70 )

[node name="Label" type="Label" parent="UI/TopHUD/HUD/AttackInfo/TextContainer"]
margin_top = 4.0
margin_right = 25.0
margin_bottom = 76.0
rect_min_size = Vector2( 25, 70 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "8"
align = 1
valign = 1

[node name="DefenseInfo" type="HBoxContainer" parent="UI/TopHUD/HUD"]
margin_left = 545.0
margin_right = 644.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 70 )

[node name="IconContainer" type="MarginContainer" parent="UI/TopHUD/HUD/DefenseInfo"]
margin_right = 70.0
margin_bottom = 80.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Icon" type="TextureRect" parent="UI/TopHUD/HUD/DefenseInfo/IconContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 70.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="TextContainer" type="CenterContainer" parent="UI/TopHUD/HUD/DefenseInfo"]
margin_left = 74.0
margin_right = 99.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 70 )

[node name="Label" type="Label" parent="UI/TopHUD/HUD/DefenseInfo/TextContainer"]
margin_top = 4.0
margin_right = 25.0
margin_bottom = 76.0
rect_min_size = Vector2( 25, 70 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "8"
align = 1
valign = 1
[connection signal="choose_card_state" from="." to="UI" method="_on_GameMatch_choose_card_state"]
[connection signal="draw_state" from="." to="UI" method="_on_GameMatch_draw_state"]
[connection signal="play_state" from="." to="UI" method="_on_GameMatch_play_state"]
